--- a/dist.ini
+++ b/dist.ini
@@ -37,10 +37,10 @@ File::Which=0
 Getopt::Long=0
 JSON=0
 List::Util=0
-Log::Any::Adapter=0
-;!lint_prereqs assume-used "via Log::Any::Adapter"
-Log::Any::Adapter::Screen=0
-Log::Any::IfLOG=0.07
+Log::ger=0
+Log::ger::Output=0
+;!lint_prereqs assume-used "via Log::ger::Output"
+Log::ger::Output::Screen=0
 MIME::Base64=0
 ; inlining currently does not work for me
 Mo=0
@@ -61,6 +61,11 @@ Scalar::Util=0
 Perinci::Sub::DepChecker=0
 Pipe::Find=0
 Term::ReadKey=0
+
+; temporary
+Log::Any::Adapter=0
+;!lint_prereqs assume-used "via Log::Any::Adapter"
+Log::Any::Adapter::Screen=0
 
 [Prereqs / DevelopX_spec]
 -phase=develop
