Add initial Travis-CI configuration

--- a/dist.ini
+++ b/dist.ini
@@ -2,14 +2,19 @@ version=1.813
 
 name=Perinci-CmdLine-Lite
 
+license = Perl_5
+copyright_holder = PERLANCAR
+
 [RenderTemplate]
 
 ;[EnsureDepakable]
 
 ;[LocaleTextDomain]
 
-[@Author::PERLANCAR]
-:version=0.59
+[@Filter]
+-bundle=@Author::PERLANCAR
+-version=0.59
+-remove=StaticInstall
 
 [Prereqs / TestRequires]
 Test::More=0.98
@@ -85,3 +90,5 @@ module=JSON
 [Extras / lint-prereqs / assume-provided]
 ; only when Perinci::CmdLine::Base is subclassed by Perinci::CmdLine::Classic
 Moo=0
+
+; authordep Pod::Weaver::PluginBundle::Author::PERLANCAR
