Match build prereqs to usage
One of the CPANTS kwalitee issues is to match the list of build
prerequisites in META.yml with those actually used in the distribution.
This change adds the prerequisites found to be missing by the CPANTS
service.

--- a/dist.ini
+++ b/dist.ini
@@ -16,6 +16,9 @@ Test::More=0.98
 Test::Perinci::CmdLine=1.47
 ;!lint_prereqs assume-used "for test suite"
 YAML::Old=0
+Pod::Coverage::TrustPod=0
+Test::Pod=0
+Test::Pod::Coverage=0
 
 [Prereqs]
 perl=5.010001
