Move dependeny PerlIO::locale from RuntimeRequires to RuntimeRecommends to work around installation problem on Windows

--- a/dist.ini
+++ b/dist.ini
@@ -17,7 +17,7 @@ name=Perinci-CmdLine-Lite
 ;[LocaleTextDomain]
 
 [@Author::PERLANCAR]
-:version=0.605
+:version=0.606
 
 [Prereqs / TestRequires]
 Test::More=0.98
@@ -62,8 +62,6 @@ Perinci::Result::Format::Lite=0.286
 Perinci::Sub::Complete=0.935
 Perinci::Sub::GetArgs::Argv=0.846
 ;Perinci::Sub::To::FishComplete=0
-;!lint_prereqs assume-used "undetected, use via binmode()"
-PerlIO::locale=0
 ; authordep Pod::Weaver::PluginBundle::Author::PERLANCAR
 Progress::Any::Output=0
 ;!lint_prereqs assume-used "via Progress::Any::Output->set"
@@ -74,6 +72,8 @@ Text::ParseWords=0
 [Prereqs / RuntimeRecommends]
 Data::Dump::Color=0.246
 Perinci::Sub::DepChecker=0
+;!lint_prereqs assume-used "undetected, use via binmode(); currently moved to recommends due to installation problem in Windows"
+PerlIO::locale=0
 Pipe::Find=0
 Term::ReadKey=0
 Time::HiRes=0
