Use Browser::Find::Windows to set a default viewer on Windows

--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,9 @@ name=Perinci-CmdLine-Lite
 [@Author::PERLANCAR]
 :version=0.606
 
+[OSPrereqs / MSWin32]
+Browser::Find::Windows=0
+
 [Prereqs / TestRequires]
 Test::More=0.98
 Test::Perinci::CmdLine=1.480
