[bugfix] Quote program name too when executing command

--- a/dist.ini
+++ b/dist.ini
@@ -16,8 +16,9 @@ name=Perinci-CmdLine-Lite
 
 ;[LocaleTextDomain]
 
-[@Author::PERLANCAR]
-:version=0.606
+[@Filter]
+-bundle=@Author::PERLANCAR
+-remove=StaticInstall
 
 [OSPrereqs / MSWin32]
 Browser::Find::Windows=0
