Force latest version of Perinci::Examples to test CPAN Testers failures

--- a/dist.ini
+++ b/dist.ini
@@ -61,6 +61,8 @@ Moo=0
 Perinci::Access::Lite=0.09
 Perinci::CmdLine::Help=0.175
 Perinci::CmdLine::Util::Config=1.725
+;!lint_prereqs assume-used "force version"
+Perinci::Examples=0.824
 Perinci::Object=0.311
 Perinci::Result::Format::Lite=0.286
 Perinci::Sub::Complete=0.944
