[plugin Debug::Dump*] Add configuration 'dumper' to select dumper

--- a/dist.ini
+++ b/dist.ini
@@ -25,7 +25,7 @@ Browser::Find::Windows=0
 
 [Prereqs / TestRequires]
 Test::More=0.98
-Test::Perinci::CmdLine=1.480
+Test::Perinci::CmdLine=1.484
 ;!lint_prereqs assume-used "for test suite"
 YAML::Old=0
 
@@ -37,10 +37,11 @@ warnings=0
 Complete::Bash=0.333
 Complete::Fish=0.03
 Complete::Tcsh=0
-Complete::Util=0.608
+Complete::Util=0.616
 Complete::Zsh=0
 ; we want conversion of Math::BigInt objects into JSON strings
 Data::Clean::ForJSON=0.390
+Data::Dmp=0.242
 Data::Dump=0
 Data::Sah=0.914
 Data::Sah::Util::Type=0.45
