[bugfix] Resolve argument schemas so we can find default even if it's specified in base schemas

--- a/dist.ini
+++ b/dist.ini
@@ -44,6 +44,7 @@ Data::Clean::ForJSON=0.390
 Data::Dmp=0.242
 Data::Dump=0
 Data::Sah=0.914
+Data::Sah::Resolve=0.010
 Data::Sah::Util::Type=0.45
 Encode=0
 Fcntl=0
